# VehicleModel

./: .gitignore  .gitmodules  LHRSVehiclePwrAnalysis.py  Makefile  README.md  VehicleModel.py  gui.py  log.csv  main.cpp  main.py  model.hpp  params.yaml  pyproject.toml  run-model  run-model.sh  run-ui.sh  ui.py  units.py  vehicle_model.hpp
.github/workflows/: run-model.yaml
arduino/: ArduinoTemp.ino
gui/: parameters_tab.py
models/: array.py  base.py  battery.py  drag.py  energy_model.py  esr_loss_model.py  lv_draw_model.py  motor.py  motor_losses.py  rr.py  vehicle_model.py  weather_model.py
